[package]
name = "villus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
libbpf-rs = { path = "./libbpf-rs" }
libc = "0.2"
plain = "0.2"
structopt = "0.3"

[build-dependencies]
libbpf-cargo = { path = "./libbpf-cargo" }
